--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
   <meta
     property="og:title"
-    content="Gabriel Barbosa - Portifólio"
+    content="Gabriel Viana - Portfólio"
   />
 
   <meta
