refactor: change title and buttons width

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   
   <meta name="theme-color" content="#232532" />
-  <title>Gabriel Barbosa</title>
+  <title>Gabriel Viana</title>
 
   <meta
     property="og:title"
